bug 431474 - Document Accessibles not getting state_focused when they have focus patch by aaronleventhal@moonset.net (Aaron Leventhal) r=surkov r=me a1.9=beltzner